new version of intro, before deleting old parts

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -76,6 +76,8 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
  <!-- What is the theoretic meaning of the series study? -->
 
+The unidentified good person is me: Spontaneous self-referential processing for good moral character
+
 # Introduction
 
  <!--[sentences in bracket are key ideas] -->
@@ -84,26 +86,62 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
-With limited cognitive resources, not all input information are processed equally. Visual stimuli, for example, are prioritized because for reasons: salient physical features, affective value or rewarding value [attention capture related papers]. Most human are navigating in a social world, thus, important social information is also be prioritized. For example, self-relevant and affective information. Beyond that, recent studies found that moral related information also prioritized (@brady_attentional_2020; @gantman_moral_2014). The center of morality is person (). It is not surprising that moral character information that associated with person having advantage in early information processing stage (@eiserbeck_visual_2020, @anderson_visual_2011). Studies used instantly acquired character related information to neutral faces and then tested these faces with various cognitive task, most studies found that neutral faces associated with negative social behavioral were prioritized as compared to neutral (and positive) (@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017), while other studies reported positive behavioral related faces were processed faster in attention (@shore_social_2013). 
+[morality is central to social life, moral character is the central of morality]
+People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or the third party of a moral event, we are all judging the moral character of people involved in as "good" or "bad" or judging the behaviors as "right" or "wrong". In the later case, we are implicitly judging the moral character of the agent as "good" vs. "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that most of people's conversation (gossips) are related to moral character of other (or, reputation) []. Also, evidence from studies of person perception and social evaluation revealed that morality is a basic dimension for social evaluation and it is weighed more than traits from other dimensions [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006]. Also, the importance of moral character had been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [@strohminger_true_2017]. 
 
-The conflicting results also imply different mechanisms underlying the moral character effect. The negativity effect was usually attributed to its affective value, which, in essence, is a threatening effect. In contrast, the positivity effect suggested a value-based information process, i.e., we are avoiding potential free-riders and approaching to potential cooperators. This value-based explanation had been used to explain previous results (e.g., @shore_social_2013). 
+[No real perceptual studies on moral character] 
+Given the importance of moral character, it is not surprised that people often claim that moral character related information are processed more efficiently in human information processing system, especially 'bad' agents (e.g., the introduction part of Siegel,et al. 2018 nhb). A scrutiny of the evidence, however, revealed few direct evidence. For example, while Schupp et al (2004), Ohman et al (2001) are cited as the evidence,  they are using facial expressions as stimuli, thus did not contain any moral meaning; Skowronski et al (1989), Fiske et al (1980), and Baumeister et al (2011) are often cited but they were not referring to moral character in specific but using negative social traits, which include competence and sociability as well. For instance, Pratto et al (1991) focused on the desirability of personal traits, which is not specific to moral character either. While Vanneste et al. (2007) tried to study the attentional grabbing effect of the facial expression when the agent decide not to cooperate, the explanation of the effect can not be specifically attribute to uncooperativeness but the facial expression itself, after all the participant who performed the dot-detection task have no idea about the moral character or behavior of that facial expression. In short, though researchers in the field have the intuition that that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. The situation is like person perception, as @freeman_dynamic_2011 put it, studies in the person perception didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. That is, these studies are perception of moral character without perceptual process. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception), and (2) the underlying mechanism of the prioritization effect of moral character related information.
 
-To clarify the effect and find a potential mechanism, we need first to find a robust effect that can be replicated. In the moral perceptual it is especially important because some of the experiments were not successfully replicated (see @stein_no_2017). After finding an stable effect, we could then explore the potential mechanisms. 
+[Challenge: operationalization of moral character in laboratory settings] 
+The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as immoral depends on a number of factors such as intention, consequences [cushman, young]. Also, whether a behavior is morality relevant depends on cultural and social norm [fiske, haidt]. These factors, when studied in laboratory settings, have to be carefully controlled and manipulated using complex verbal scenarios. However, when in the classic cognitive paradigms, long sentences or complicated scenarios are prohibited because it's hard to dissociated different processes then. To solve this issue, two approaches emerged in the last decade. The first approach used direct learning. For example, @shore_social_2013 asked participants first interact with a person by present a face. By manipulating the behavior associated with the face, participants can form an impression of the person behind the face and judge it as trustworthy or not. After getting such impression, participants then finished a attention blink task where the faces were used as stimuli. 
+
+Another approach used indirect learning, where participants first associate visual stimuli (e.g., faces) with moral behaviors, then perform a task that examine the differences between faces associated with different moral behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then after participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant need to report the content of their vision by pressing buttons. They found that faces associated negative social behavior were dominant in the visual awareness for longer time than faces associated with other types of behaviors (but see @stein_no_2017). Similar paradigm were used to study trustworthiness of faces. In these studies, faces were associated with either sentences about trust related behavior (@eiserbeck_visual_2020). This indirect learning paradigm had been used not only for moral behaviors but also other affective meanings (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008). These studies showed that the building such association requires minimal behavioral information, abstract conceptual information are enough.
+
+The studies reviewed above suggested the using associative learning task might be a valid way to study moral character in lab settings. In the current study, we further simplify the indirect learning paradigm by using geometric shapes as the visual stimuli instead of faces and moral character labels instead of behavior descriptions. Previous studies combined shapes and person label (e.g., self, friend, stranger) to study the self-referential effect and found a robust self-prioritization effect (@Sui_2012_JEPHPP). Here we modified the shape-label association paradigm to suit the moral character purpose. This paradigm has several advantages. first, it only used a few number of labels that represent different moral character, therefore control extra factors and avoid the semantic priming problem. Second, it use non-social visual stimuli, avoided the idiosyncratic features brought by using faces. Besides, the task itself is simple and can combined with other cognitive tasks. 
+
+This paradigm consistent with the dynamic interactive model of person perception (@freeman_dynamic_2011). The dynamic interactive model of person perception proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating some sensory stimuli, some person traits can be activated. The associative learning task reverse the process and directly linked the personal traits (moral traits in our case) with visual stimuli, therefore created a temporary but direct link between personal trait and visual stimuli.
+
+[The current study] 
+Using the person-label associative learning and perpetual matching task, the current study aimed at answering two questions mentioned above: (1) whether moral character related information are prioritized, if so, what is the exact pattern; (2) what is the potential explanation for such pattern.
+
+To investigate the first issue and validate that moral character concepts activated moral character as a social cue, we designed four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm and changed labels from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". We further tried semantic labels that have more explicit moral meaning ("kind-person", "neutral-person", and "evil-person"). In the third experiments, as in @anderson_visual_2011, we asked participant to learn the association between three different diagnostic behavior and three different names, and then use the names as moral labels for the associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a consistent pattern of effect, that is, the visual cues that associated with positive moral character were prioritized. 
+
+Although the available studies agree that social/moral information can enhance the saliency of the sensory stimuli, yet the direction of the effect is not consistent. For instance, there are two studies reported a negativity effect where neutral faces associated with negative social behavioral were processed better than neutral faces that associated with neutral behaviors (@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017). The reason for the prioritization was usually attributed to affective meaning of the negative behaviors, which, in essence, is a threatening effect. In contrast, there was one study reported a positivity effect, where faces associated with positive interaction history were prioritized over faces associated with neutral or negative interaction history. And the positivity effect was attributed to a value-based information process (e.g., @shore_social_2013). 
+
+The direction of the effect leads to different underlying explanations. The negativity effect usually explained by the evolutionary adoptive mechanism where the threatening feature were prioritized. However, accumulating evidence supported the view that negativity effect, especially those related to affective stimuli, are prioritized because of the low-level physical features, e.g., low frequency feature in the facial expression (). This is reflected in the pattern that threatening stimuli are prioritized in detection task, e.g., dot-probe task. The positivity effect, on the other hand, appeared later in the processing stage and were attributed to its rewarding value (we limit the value-based account to rewarding value). The value based account is an appealing explanation, there were strong evidence showing that positive stimuli are prioritized []. For example, [Anderson et al (2011)] found that stimuli associated with higher reward could be found more easily in a visual search task. The follow-up studies confirmed that value-based prioritization if a robust effect. A meta-analysis also found that positive stimuli are preferentially processed in perception []. In our experiments, the positive moral character label "good person" may represent a positive, vacuous value. The moral value of others was found to be profitable in previous survey [Abele et al].
+
+When applying to social information such as moral character, both explanations ignored the social meaning of the stimuli. Increasing evidence supported the view that social categorization also impact our information processing, including perception [Xiao, Freeman]. Social categorization theory stated that we perceiving others based on whether or not belong to "us"[], as an extension of the self. In other words, we may view positive moral character as extension of the self, while bad people as them [person-based morality, group-based morality]. If moral judgment is a social categorization process [], and if social categorization impact our visual perception [], then we can infer positive moral character might be prioritized because we regard that as an natural extension of the self.
+
+However, the above four experiments could not distinguish between these possibilities, because the concept "good-person" creating an unexpected ambiguity for the identity of the good person. it can both be rewarding and be categorized as in-group member, and previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized.  
+
+[Distinguish two explanations by make self salient, exp3a, 3b, 6b] 
+Though both two the value-based attention and moral-based categorization accounts can explain the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experimental design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter merely confirmed one's personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized, or maybe good-other are even more prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
+
+We introduced identity (self vs. other) as an addition independent variable in exp 3a, 3b, and 6b. Now the moral valence is orthogonal to the identity. We found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A three-level Bayesian generalized linear mixed effect model showed that there was no effect of valence when the identity was other. This results showed that value-based attention was not likely the mechanism behind the pattern we observed in first four experiments. However, it is still unclear Why good-self was prioritized. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization *per se*. 
+
+
+
+With limited cognitive resources, not all input information are processed equally. Salient visual stimuli, for example, are prioritized because of their physical features, affective value, or rewarding value [attention capture related papers]. In the social world, thus, important social information is also prioritized. For example, self-relevant and social affective information. Beyond that, recent studies found that moral related information also prioritized (@brady_attentional_2020; @gantman_moral_2014). The center of morality is person (). It is not surprising that moral character information that associated with person having advantage in early information processing stage (@eiserbeck_visual_2020, @anderson_visual_2011). Even instantly acquired social/moral information about a person can change the saliency of the visual stimuli of that person. For example, neutral faces associated with negative social behavioral were prioritized as compared to neutral (and positive) (@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017), neutral faces associated with trustworthy behaviors were processed faster in attention (@shore_social_2013). 
+
+Although the available studies agree that social/moral information can enhance the saliency of the sensory stimuli, yet the direction of the effect is not consistent. For instance, there are two studies reported a negativity effect where neutral faces associated with negative social behavioral were processed better than neutral faces that associated with neutral behaviors (@anderson_visual_2011, @eiserbeck_visual_2020, but see @stein_no_2017). The reason for the prioritization was usually attributed to affective meaning of the negative behaviors, which, in essence, is a threatening effect. In contrast, there was a study reported a positivity effect, where faces associated with positive interaction history were prioritized over faces associated with neutral or negative interaction history. And the positivity effect was attributed to a value-based information process (e.g., @shore_social_2013). 
+
+To understand the top-down influence of moral character on visual perception, we need first to find a robust effect that can be replicated. In the moral perceptual it is especially important because some of the experiments were not successfully replicated (see @stein_no_2017). After finding an stable effect, we could then explore the potential mechanisms. 
 
 Here we reported a series experiments that first confirmed a robust effect of moral character in a laboratory setting, then examined two competing explanation for that robust effect. 
 
 ### Learning moral character instantly
 One challenge when trying to study moral character's effect on perception lies in the difficulty to operationalize the "moral" part. Morality is defined by context. Whether a behavior should be judged as immoral depends on a number of factors such as intention, consequences [cushman, young], also depends on cultural and social norm [fiske, haidt]. These factors, when studied in laboratory settings, were usually carefully manipulated in verbal scenarios. However, when studying the perceptual or attentional effect of morality, long scenarios do not suit. 
 
-Two approaches were used to solve this issue, both include using linguistic materials. The first approach used moral words as materials. For example, @gantman_moral_2014 applied lexical decision task to both moral and non-moral words and found that moral words were responded faster. A follow-up study further revealed that the motivation of justice modulated the prioritization of moral words (@gantman_exposure_2016). The underlying mechanism for the prioritization effect observed in this paradigm was debated because it was confounded by semantic priming (@firestone_enhanced_2015). 
+Two approaches were used to solve this issue. The first approach used direct learning. For example, @shore_social_2013 asked participants first interact with a person by present a face. By manipulating the behavior associated with the face, participants can form an impression of the person behind the face and judge it as trustworthy or not. After getting such impression, participants then finished a attention blink task where the faces were used as stimuli. 
 
-Another approach is the associative learning paradigm, where participants first associate visual stimuli (e.g., faces) with moral behaviors, then perform a task that examine the differences between faces associated with different moral behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then after participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant need to report the content of their vision by pressing buttons. They found that faces associated negative social behavior were dominant in the visual awareness for longer time than faces associated with other types of behaviors (but see @stein_no_2017). Similar paradigm were used to study trustworthiness of faces. In these studies, faces were associated with either sentences about trust related behavior (@eiserbeck_visual_2020) or with experienced interaction in a trust game (@shore_social_2013). This paradigm had been used not only for moral behaviors but also other affective meanings and found that the building such association requires minimal behavioral information (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008).
+Another approach used indirect learning, where participants first associate visual stimuli (e.g., faces) with moral behaviors, then perform a task that examine the differences between faces associated with different moral behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then after participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant need to report the content of their vision by pressing buttons. They found that faces associated negative social behavior were dominant in the visual awareness for longer time than faces associated with other types of behaviors (but see @stein_no_2017). Similar paradigm were used to study trustworthiness of faces. In these studies, faces were associated with either sentences about trust related behavior (@eiserbeck_visual_2020) or with experienced interaction in a trust game (@shore_social_2013). This paradigm had been used not only for moral behaviors but also other affective meanings and found that the building such association requires minimal behavioral information (Bliss-Moreau, Barrett, & Wright, 2008; Falvello, Vinson, Ferrari, & Todorov, 2015; Todorov & Olson, 2008).
 
 The studies reviewed above suggested the using associative learning task might be a valid way to study moral character in lab settings. In the current study, we further simplify the paradigm by using geometric shapes as the visual stimuli instead of faces and use moral character words instead of sentences. Previous studies combined shapes and person label (e.g., self, friend, stranger) to study the self-referential effect and found a robust self-prioritization effect (@Sui_2012_JEPHPP). Here we modified the shape-person association paradigm to suit the moral character purpose. This paradigm has several advantages. first, it only used a few number of labels that represent different moral character, therefore control extra factors and avoid the semantic priming problem. Second, it use non-social visual stimuli, avoided the idiosyncratic features brought by using faces. Combined these two features, the task itself is simple and can combined with different cognitive tasks. 
 
 This paradigm consistent with the dynamic interactive model of person perception (@freeman_dynamic_2011). The dynamic interactive model of person perception proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating some sensory stimuli, some person traits can be activated. The associative learning task reverse the process and directly linked the personal traits (moral traits in our case) with visual stimuli, therefore created a temporary but direct link between personal trait and visual stimuli.
 
 We tested the moral associative learning task by a series of experiments and found a robust effect moral positive effect.
+
 
 ### Good person as profitable other or as an extension of the self
 
